--- a/movie/pubspec.yaml
+++ b/movie/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   equatable: 
   provider: ^6.0.4
   flutter_rating_bar: ^4.0.0
+  flutter_bloc: ^8.1.1
+  bloc: 
+  rxdart:
   about:
     path: ../about
   inti:
@@ -33,13 +36,15 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.3.2
   build_runner: ^2.0.4
+  bloc_test: ^9.0.0
+  mocktail: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  uses-material-design: true
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
