--- a/search/pubspec.yaml
+++ b/search/pubspec.yaml
@@ -41,13 +41,14 @@ dev_dependencies:
   mockito: 
   build_runner: ^2.0.4
   bloc_test: ^9.0.0
+  mocktail: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  uses-material-design: true
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
