--- a/tv/pubspec.yaml
+++ b/tv/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   provider: ^6.0.4
   flutter_rating_bar: ^4.0.0
   cached_network_image:
+  flutter_bloc: ^8.1.1
+  bloc: 
+  rxdart:
   about:
     path: ../about
   movie:
@@ -34,13 +37,15 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  bloc_test: ^9.0.0
+  mocktail: ^0.3.0
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  uses-material-design: true
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
