--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   path_provider: ^2.0.2
   test_cov_console: ^0.2.2
   flutter_bloc: ^8.1.1
+  mockito: ^5.0.8
+  build_runner: ^2.0.4
+  bloc_test: ^9.0.0
+  mocktail: ^0.3.0
   about: 
     path: about
   inti:
@@ -52,8 +56,6 @@ dependencies:
     path: search
 
 dev_dependencies:
-  mockito: ^5.0.8
-  build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
 
