--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   build_runner: ^2.0.4
   bloc_test: ^9.0.0
   mocktail: ^0.3.0
+  firebase_core:
+  firebase_crashlytics:
   about: 
     path: about
   inti:
